[gd_scene load_steps=7 format=3 uid="uid://bywqqrmmqtcpk"]

[ext_resource type="Script" path="res://interface/menus/pause2/pause_menu.gd" id="1_uh5g0"]
[ext_resource type="Script" path="res://interface/inventory/core/inventory_grid_stacked.gd" id="2_080u7"]
[ext_resource type="FontFile" uid="uid://cs3qtlo6j6oex" path="res://assets/fonts/pixelmix.ttf" id="2_bhofp"]
[ext_resource type="Script" path="res://interface/menus/pause2/quests_ui.gd" id="7_hbgqu"]
[ext_resource type="PackedScene" uid="uid://b76wnkiyk1lhy" path="res://interface/menus/pause2/quests/quest_item.tscn" id="7_kj7xb"]
[ext_resource type="PackedScene" uid="uid://dxfstusrlgtqu" path="res://interface/menus/pause2/quests/quest_step_item.tscn" id="10_5ptfk"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uh5g0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 0.831373)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 13.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 1

[node name="Inventory" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="InventoryGridStacked" type="Node" parent="Control/TabContainer/Inventory"]
script = ExtResource("2_080u7")

[node name="Quests" type="Control" parent="Control/TabContainer"]
layout_mode = 2
script = ExtResource("7_hbgqu")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 234.0
offset_bottom = 214.0
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Quests/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="QuestItem" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_kj7xb")]
layout_mode = 2
script = null

[node name="QuestItem2" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_kj7xb")]
layout_mode = 2
script = null

[node name="QuestItem3" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_kj7xb")]
layout_mode = 2
script = null

[node name="QuestItem4" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_kj7xb")]
layout_mode = 2
script = null

[node name="QuestItem5" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_kj7xb")]
layout_mode = 2
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 250.0
offset_top = 17.0
offset_right = 465.0
offset_bottom = 61.0

[node name="TitleLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(215, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bhofp")
text = "Quest Title"
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.608618, 0.608618, 0.608618, 1)
custom_minimum_size = Vector2(215, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bhofp")
text = "Quest description"
autowrap_mode = 2

[node name="SpacerControl" type="Control" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuestStepItem" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_5ptfk")]
layout_mode = 2
script = null

[node name="QuestStepItem2" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_5ptfk")]
layout_mode = 2
script = null

[node name="QuestStepItem3" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_5ptfk")]
layout_mode = 2
script = null

[node name="System" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/System"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -65.0
offset_right = 77.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnToGameButton" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../SettingsGridContainer/MusicSlider")
focus_next = NodePath("../SettingsGridContainer/MusicSlider")
focus_previous = NodePath("../QuitButton")
text = "Continue Game"
alignment = 0

[node name="SettingsGridContainer" type="GridContainer" parent="Control/TabContainer/System/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="Control/TabContainer/System/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Control/TabContainer/System/VBoxContainer/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../ReturnToGameButton")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../../ReturnToGameButton")
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="Control/TabContainer/System/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Control/TabContainer/System/VBoxContainer/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicSlider")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MainMenuButton" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
text = "Return to menu"
alignment = 0

[node name="QuitButton" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ReturnToGameButton")
focus_next = NodePath("../ReturnToGameButton")
focus_previous = NodePath("../MainMenuButton")
text = "Quit Game"
alignment = 0

[node name="Label" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.643137)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -131.0
offset_right = -160.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
text = "[ paused ]"

[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
